GNOME Bugzilla – Bug 696665
notifications: don't fail if a referenced application does not exist
Last modified: 2013-03-27 13:54:43 UTC
If we have settings for an app, but we don't have a desktop file, it is likely the app was uninstalled, so just ignore it and avoid the criticals.
Created attachment 239902 [details] [review] notifications: don't fail if a referenced application does not exist
Review of attachment 239902 [details] [review]: Please commit to gnome-3-8 and master
Attachment 239902 [details] pushed as e6e35a2 - notifications: don't fail if a referenced application does not exist