notifications: don't fail if a referenced application does not exist

If we have settings for an app, but we don't have a desktop file, it
is likely the app was uninstalled, so just ignore it and avoid the
criticals.

https://bugzilla.gnome.org/show_bug.cgi?id=696665